<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/buttonColor"
    android:padding="5dp"
    tools:context="michaellin.venture_10.ViewEventActivity">

    <LinearLayout
        android:id="@+id/event_view_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/buttonColor"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center_horizontal"
            android:padding="3dp"
            android:text="@string/placeholder"
            android:textColor="@android:color/background_dark"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/view_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/CreateEventPicture_Descriptor"
            android:scaleType="fitCenter"
            android:src="@drawable/placeholder_image"
            android:background="@android:color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/view_address"
                android:textSize="15sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/view_datetime"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <ScrollView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                tools:ignore="NestedWeights">

                <TextView
                    android:id="@+id/view_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:gravity="start"
                    android:padding="3dp"
                    android:text="@string/placeholder"
                    android:textSize="15sp"
                    android:background="@android:color/white"/>
            </ScrollView>

            <ScrollView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                tools:ignore="NestedWeights">

                <TextView
                    android:id="@+id/view_datetime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:gravity="start"
                    android:padding="3dp"
                    android:text="@string/placeholder"
                    android:textSize="15sp"
                    android:background="@android:color/white"/>
            </ScrollView>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/view_description"
            android:textSize="15sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border">

            <TextView
                android:id="@+id/view_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:gravity="start"
                android:padding="3dp"
                android:text="@string/placeholder"
                android:textSize="15sp"
                android:background="@android:color/white"/>
        </ScrollView>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="returnToMap"
            android:text="@string/back_button"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
